[tool.poetry]
name = "nutrifood"
version = "0.1.0"
description = "Gather Nutritional information easily"
authors = ["Michael Sachdev <msachdev@live.de>"]

[tool.poetry.dependencies]
python = "^3.9"
black = { version = "*", allow-prereleases = true }
django = "*"
django-cors-headers = "*"
djangorestframework = "*"
djangorestframework-simplejwt = "*"
prospector = "*"
requests = "*"
psycopg2 = "^2.8.6"
PyJWT = "^2.0.1"
python-dotenv = "^0.15.0"



[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
